subdivision.  Increased default -r option to 16384
as well.  Also increased maximum internal set size
from 127 to 511, to accommodate difficult mesh
models where many faces come together at a point.
This required a little reprogramming in for couple
of recursive routines using sets to avoid overrunning
the stack limit.

==============================
Version 3.6

Modified 4-byte RGBE encoding routine to avoid problems
when one or two primary values is negative and the other(s)
positive.  This used to generate some strange color values.

Added -oc option to rtrace to output local (u,v) coordinates.

Fixed bugs in local uv and j unit vector variables in src/rt/func.c.

Added warning message to OpenGL rendering routines about new
mesh primitive, which we cannot currently render.

Added -if, -id, -of, and -od options to rcalc to provide for
binary float and double i/o.

****************** COMPATIBILITY CHANGE ***********************
Changed holodeck format to used off_t instead of long for beam
positions, which allows holodecks to grow to system file size limit.

Fixed wrapping long in source hit test code, which would cause
odd horizontal lines in some very long renderings.

Added -f and -w options to ra_tiff to create IEEE float and 16-bit/primary
TIFF output, respectively.  These formats are also understood on reverse
conversion.  (16-bit/primary has been understood for some time, but not
IEEE float.)

Added -N option to rad to start multiple rendering processes in
parallel.

Fixed bug where mesh instances were not being freed, so subsequent calls
in programs like ranimate would refer to bogus data.

Added support in normtiff for floating-point and 16-bit/sample TIFF input
files.

Changed marksources() routine (src/rt/source.c) to check all
primitives in the modifier chain for emitting types, not only
the first.  This permits sources to be described with intervening
modifiers before the light/illum/glow primitive.
